2011-11-08  Vadim Kurland  <vadim@netcitadel.com>

	* CompilerDriver_pf_run.cpp (CompilerDriver_pf::run): fixed SF bug
	#3429377 "PF: IPv6 rules are not added in IPv4/IPv6
	ruleset (anchor)". Compiler for PF did not inlcude rules generated
	for IPv6 in generated PF anchor configuration files.

	* CompilerDriver_pf_run.cpp (CompilerDriver_pf::run): fixed SF bug
	3428992: "PF: rules order problem with IPv4 and IPv6". Compiler
	for PF should group ipv4 and ipv6 NAT rules together, before it
	generates ipv4 and ipv6 policy rules.

	* BaseObjectDialog.cpp (connectSignalsOfAllWidgetsToSlotChange):
	fixed SF bug #3433587 "Manual edit of new service Destination Port
	END value fails". This bug made it impossible to edit the value of
	the end of the port range because as soon as the value became less
	than the value of the beginning the range, the GUI would reset it
	to be equal to the value of the beginning of the range. This
	affected both TCP and UDP service object dialogs.

	* PolicyCompiler_ipfw_writers.cpp (PrintRule::_printAddr): fixed
	SF bug #3426843 "ipfw doesn't work for self-reference, in
	5.0.0.3568 version".

2011-10-19  Vadim Kurland  <vadim@netcitadel.com>

	* PolicyCompiler_pix.cpp (AddressRangesIfTcpServiceToFW::processNext): 
	see #2662 "Crash when compiling ASA rule with IP range". Need to
	split address range if it is used in "source" of a rule that
	controls telnet, ssh or http to the firewall itself and firewall's
	version is >= 8.3. Commands "ssh", "telnet" and "http" (those that
	control access on the corresponding protocols to the firewall
	itself) accept only ip address of a host or a network as their
	argument. They do not accept address range, named object or object
	group. This is so at least as of ASA 8.3. Since we expand address
	ranges only for versions < 8.3 and use named object for 8.3 and
	later, we need to make this additional check and still expand
	address ranges in rules that will later convert to "ssh", "telnet"