@@ -349,6 +349,14 @@
       appears in a rule AND object-group option is turned ON"
     </p>
   </li>
+
+  <li>
+    <p>
+      fixed SF bug 3435004: "Empty lines in comment result in
+      "Incomplete Command" in IOS".
+    </p>
+  </li>
+
 </ul>
 
 
